crates/toml_edit/tests/fixtures/invalid/integer/leading-us-hex.stderr
TOML parse error at line 1, column 18
  |
1 | leading-us-hex = _0o1
  |                  ^
Invalid integer
Expected leading digit
